add user list json
