# docs/swagger.json
@@ -18,21 +18,80 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/test/": {
+        "/users": {
             "get": {
-                "description": "test api detail",
+                "description": "return users",
                 "consumes": [
-                    "application/x-json-stream"
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
                 ],
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "not require",
-                        "name": "none",
+                        "description": "name",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "age",
+                        "name": "age",
                         "in": "query"
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/main.UsersResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "users": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/main.User"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "main.User": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer",
+                    "example": 20
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "name": {
+                    "type": "string",
+                    "example": "test"
+                }
+            }
+        },
+        "main.UsersResponse": {
+            "type": "object",
+            "properties": {
+                "users": {}
             }
         }
     }
